--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
       <a href="project2/index.html">اذهب للمشروع</a>
     </div>
     <div class="project-card">
-      <h3>مشروع 3</h3>
-      <p>وصف سريع للمشروع.</p>
-      <a href="project3/index.html">اذهب للمشروع</a>
+      <h3>Task1</h3>
+      <p>login</p>
+      <a href="Task1/index1.html">اذهب للمشروع</a>
+      <a href="Task1/index2.html">اذهب للمشروع</a>
     </div>
     <!-- اضيفي هنا أي مشاريع جديدة بنفس النمط -->
   </div>
